examples/test/testpolicy11893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11893
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key10: value38
      key26: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value22
          key4: value33
      podSelector:
        matchLabels:
          key30: value18
          key15: value24
